--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "clsx": "^2.1.1",
     "codemirror": "^6.0.2",
     "lucide-react": "^0.548.0",
+    "monaco-editor": "^0.54.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
