--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -32,6 +32,8 @@ portable-pty = "0.9.0"
 uuid = { version = "0.8.2", features = ["v4"] }
 tauri-plugin-pty = "0.1.1"
 dirs = "5"
+zip = "6.0.0"
+
 
 [target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
 tauri-plugin-global-shortcut = "2.3.0"
