feat(lsp): add Language Server Protocol integration
- Implement LSP service layer in src/services/lsp/
- Add Monaco adapter for LSP integration with diagnostic support
- Update Monaco workers to use Vite native ?worker imports
- Add vscode-languageclient dependencies for LSP communication
- Update documentation in CLAUDE.md, README.md, and ROADMAP.md
- Rebrand project to "Rainy Aether" with comprehensive feature overview

BREAKING CHANGE: LSP infrastructure replaces previous Monaco-only language services, requiring external language server setup for full functionality.

--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.16",
+    "vscode-languageclient": "^9.0.1",
+    "vscode-languageserver-protocol": "^3.17.5",
+    "vscode-languageserver-types": "^3.17.5",
     "zod": "^4.1.12"
   },
   "devDependencies": {
