--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -33,9 +33,8 @@ uuid = { version = "0.8.2", features = ["v4"] }
 tauri-plugin-pty = "0.1.1"
 dirs = "5"
 zip = "6.0.0"
+which = "8.0.0"
 
 
 [target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
 tauri-plugin-global-shortcut = "2.3.0"
-
-
