--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@ai-sdk/cerebras": "^1.0.28",
+    "@ai-sdk/react": "^2.0.86",
     "@anthropic-ai/claude-agent-sdk": "^0.1.30",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
