--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@ai-sdk/cerebras": "^1.0.28",
+    "@ai-sdk/google": "^2.0.27",
+    "@ai-sdk/groq": "^2.0.28",
+    "@ai-sdk/openai": "^2.0.62",
     "@ai-sdk/react": "^2.0.86",
     "@anthropic-ai/claude-agent-sdk": "^0.1.30",
     "@hookform/resolvers": "^5.2.2",
@@ -41,6 +44,7 @@
     "@xterm/addon-search": "^0.15.0",
     "@xterm/addon-web-links": "^0.11.0",
     "@xterm/xterm": "^5.5.0",
+    "ai": "^5.0.87",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.552.0",
