--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -34,6 +34,8 @@ tauri-plugin-pty = "0.1.1"
 dirs = "5"
 zip = "6.0.0"
 which = "8.0.0"
+reqwest = { version = "0.12.24", features = ["json", "stream"] }
+keyring = "3.6.3"
 
 
 [target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
