feat(agent): add comprehensive file operation tools
- Implement file operations module with read, write, edit, delete, rename, copy, and batch read functions
- Add git2 and walkdir dependencies for enhanced file handling
- Register new tool functions in Tauri lib.rs
- Add design and implementation status documentation for agent tools
- Clean up unused import in UpdateNotification component
- Format documentation in AGENT_MODEL_TIERS.md for better readability

BREAKING CHANGE: New dependencies may require Cargo.lock update and potential rebuild of Tauri application.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -37,6 +37,9 @@ zip = "6.0.0"
 which = "8.0.0"
 reqwest = { version = "0.12.24", features = ["json", "stream"] }
 keyring = "3.6.3"
+git2 = "0.20.2"
+walkdir = "2.5.0"
+
 
 
 [target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
