feat(ui): add collapsible sidebar and resizable panels to agent interface
- Implement collapsible session sidebar with toggle functionality and compact view
- Add resizable panel layout for chat and tools sections using ResizablePanelGroup
- Enhance agent tools panel with header stats and improved grid layouts
- Update tool definitions to convert Zod schemas to JSON Schema for AI providers
- Fix Groq provider tool formatting to use object structure instead of array
- Add zod-to-json-schema dependency for schema conversion

BREAKING CHANGE: Tool definitions now use JSON Schema format, requiring updates for custom tool integrations

--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "vscode-languageclient": "^9.0.1",
     "vscode-languageserver-protocol": "^3.17.5",
     "vscode-languageserver-types": "^3.17.5",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "zod-to-json-schema": "^3.24.6"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
