--- a/package.json
+++ b/package.json
@@ -15,10 +15,18 @@
     "@ai-sdk/cerebras": "^1.0.29",
     "@ai-sdk/google": "^2.0.28",
     "@ai-sdk/groq": "^2.0.28",
-    "@ai-sdk/openai": "^2.0.62",
+    "@ai-sdk/openai": "^2.0.63",
     "@ai-sdk/react": "^2.0.87",
     "@anthropic-ai/claude-agent-sdk": "^0.1.30",
     "@hookform/resolvers": "^5.2.2",
+    "@langchain/anthropic": "^1.0.0",
+    "@langchain/cerebras": "^1.0.0",
+    "@langchain/core": "^1.0.2",
+    "@langchain/google-genai": "^1.0.0",
+    "@langchain/groq": "^1.0.0",
+    "@langchain/langgraph": "^1.0.1",
+    "@langchain/mcp-adapters": "^1.0.0",
+    "@langchain/openai": "^1.0.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
     "@radix-ui/react-avatar": "^1.1.11",
@@ -50,6 +58,7 @@
     "ai": "^5.0.87",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "langchain": "^1.0.2",
     "lucide-react": "^0.552.0",
     "mem0ai": "^2.1.38",
     "monaco-editor": "^0.54.0",
@@ -74,9 +83,9 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.1.0",
-    "express": "^4.18.2",
+    "express": "^5.1.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
-    "vite": "^7.1.12"
+    "vite": "7.2.0"
   }
 }
