--- a/package.json
+++ b/package.json
@@ -74,6 +74,8 @@
     "vscode-languageclient": "^9.0.1",
     "vscode-languageserver-protocol": "^3.17.5",
     "vscode-languageserver-types": "^3.17.5",
+    "vscode-oniguruma": "^2.0.1",
+    "vscode-textmate": "^9.2.1",
     "zod": "^4.1.12",
     "zod-to-json-schema": "^3.24.6"
   },
