--- a/package.json
+++ b/package.json
@@ -62,7 +62,6 @@
     "lucide-react": "^0.552.0",
     "mem0ai": "^2.1.38",
     "monaco-editor": "^0.54.0",
-    "monaco-languageclient": "10.2.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -72,8 +71,6 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.17",
-    "vscode-jsonrpc": "8.2.0",
-    "vscode-languageclient": "9.0.1",
     "vscode-languageserver-protocol": "^3.17.5",
     "vscode-languageserver-types": "^3.17.5",
     "vscode-oniguruma": "^2.0.1",
@@ -90,6 +87,7 @@
     "express": "^5.1.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
-    "vite": "7.2.1"
+    "vite": "7.2.1",
+    "vscode-languageclient": "9.0.1"
   }
 }
