--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -53,6 +53,7 @@ chrono = { version = "0.4", features = ["serde"] }
 sha2 = "0.10"
 regex = "1.10"
 base64 = "0.22"
+turso = "0.3.2"
 
 [target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
 tauri-plugin-global-shortcut = "2.3.0"
