--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -63,6 +63,7 @@ async-trait = "0.1.85"
 thiserror = "2.0.9"
 anyhow = "1.0.95"
 dashmap = "6.1.0"
+once_cell = "1.21.3"
 
 [target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
 tauri-plugin-global-shortcut = "2.3.0"
