feat: add progress reporting to git operations and enhance multi-window support
- Add progress callbacks to git fetch and push operations in git_auth.rs
- Update repository URLs and branding to enosislabs organization in help_manager.rs
- Improve window creation with WebviewUrl::App, better error handling, and logging in window_manager.rs
- Enhance URL parameter parsing with fallback methods and logging in ideStore.tsx
- Add comprehensive logging and error handling to app initialization in main.tsx
- Fix parameter naming in menu bar invokes to match Rust function signatures
- Configure Vite dev server for CORS and multi-window HMR support

BREAKING CHANGE: Repository URLs updated from rainy-aether to enosislabs organization, affecting documentation links and app info.

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ target
 
 # Docs for codes completetions, and other AI features.
 MDs
+
+#external reference to avoid ignoring this file
+fluxium/*
