--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -58,6 +58,7 @@ once_cell = "1.21.3"
 hostname = "0.4"
 num_cpus = "1.16"
 urlencoding = "2.1"
+rayon = "1.11.0"
 
 [target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
 tauri-plugin-global-shortcut = "2.3.0"
