--- a/package.json
+++ b/package.json
@@ -51,12 +51,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "lucide-react": "^0.553.0",
-    "monaco-editor": "^0.54.0",
+    "lucide-react": "^0.554.0",
+    "monaco-editor": "^0.55.1",
+    "monaco-languageclient": "^10.3.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-hook-form": "^7.66.0",
+    "react-hook-form": "^7.66.1",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.6",
     "react-syntax-highlighter": "^16.1.0",
@@ -68,22 +69,23 @@
     "vscode-languageserver-types": "^3.17.5",
     "vscode-oniguruma": "^2.0.1",
     "vscode-textmate": "^9.2.1",
+    "vscode-ws-jsonrpc": "^3.5.0",
     "zod": "^4.1.12",
-    "zod-to-json-schema": "^3.24.6"
+    "zod-to-json-schema": "^3.25.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
     "@types/node": "^24.10.1",
-    "@types/react": "^19.2.4",
+    "@types/react": "^19.2.6",
     "@types/react-dom": "^19.2.3",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^5.1.1",
-    "@vitest/ui": "^4.0.8",
+    "@vitest/ui": "^4.0.13",
     "express": "^5.1.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
-    "vite": "7.2.2",
-    "vitest": "^4.0.8",
+    "vite": "7.2.4",
+    "vitest": "^4.0.13",
     "vscode-languageclient": "9.0.1"
   }
 }
