--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -59,6 +59,7 @@ hostname = "0.4"
 num_cpus = "1.16"
 urlencoding = "2.1"
 rayon = "1.11.0"
+lsp-types = "0.97.0"
 
 [target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
 tauri-plugin-global-shortcut = "2.3.0"
