--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "express": "^5.1.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
+    "typescript-language-server": "^5.1.3",
     "vite": "7.2.4",
     "vitest": "^4.0.13",
     "vscode-languageclient": "9.0.1"
