--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "cmdk": "^1.1.1",
     "lucide-react": "^0.554.0",
     "monaco-editor": "^0.55.1",
-    "monaco-languageclient": "^10.3.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -69,7 +68,6 @@
     "vscode-languageserver-types": "^3.17.5",
     "vscode-oniguruma": "^2.0.1",
     "vscode-textmate": "^9.2.1",
-    "vscode-ws-jsonrpc": "^3.5.0",
     "zod": "^4.1.12",
     "zod-to-json-schema": "^3.25.0"
   },
@@ -79,6 +77,7 @@
     "@types/react": "^19.2.6",
     "@types/react-dom": "^19.2.3",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/vscode": "^1.106.1",
     "@vitejs/plugin-react": "^5.1.1",
     "@vitest/ui": "^4.0.13",
     "express": "^5.1.0",
@@ -86,7 +85,6 @@
     "typescript": "~5.9.3",
     "typescript-language-server": "^5.1.3",
     "vite": "7.2.4",
-    "vitest": "^4.0.13",
-    "vscode-languageclient": "9.0.1"
+    "vitest": "^4.0.13"
   }
 }
