--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "lucide-react": "^0.554.0",
     "monaco-editor": "^0.55.1",
     "next-themes": "^0.4.6",
+    "prismjs": "^1.30.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.66.1",
