--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "test-update-server": "node scripts/test-update-server.js"
   },
   "dependencies": {
+    "@ai-sdk/xai": "^2.0.35",
+    "@anthropic-ai/sdk": "^0.70.1",
+    "@google/genai": "^1.30.0",
     "@hookform/resolvers": "^5.2.2",
+    "@mistralai/mistralai": "^1.10.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
     "@radix-ui/react-avatar": "^1.1.11",
@@ -51,9 +55,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "cohere-ai": "^7.19.0",
+    "groq-sdk": "^0.36.0",
     "lucide-react": "^0.554.0",
     "monaco-editor": "^0.55.1",
     "next-themes": "^0.4.6",
+    "openai": "^6.9.1",
+    "perplexity-sdk": "^1.0.4",
     "prismjs": "^1.30.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
