--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@ai-sdk/xai": "^2.0.35",
     "@anthropic-ai/sdk": "^0.70.1",
+    "@cerebras/cerebras_cloud_sdk": "^1.59.0",
     "@google/genai": "^1.30.0",
     "@hookform/resolvers": "^5.2.2",
     "@mistralai/mistralai": "^1.10.0",
