--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@google/genai": "^1.30.0",
     "@hookform/resolvers": "^5.2.2",
     "@mistralai/mistralai": "^1.10.0",
+    "@modelcontextprotocol/sdk": "^1.22.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
     "@radix-ui/react-avatar": "^1.1.11",
