--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "cohere-ai": "^7.19.0",
+    "date-fns": "^4.1.0",
     "groq-sdk": "^0.36.0",
     "lucide-react": "^0.554.0",
     "monaco-editor": "^0.55.1",
