--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@cerebras/cerebras_cloud_sdk": "^1.59.0",
     "@google/genai": "^1.34.0",
     "@hookform/resolvers": "^5.2.2",
+    "@inngest/agent-kit": "^0.13.2",
     "@mistralai/mistralai": "^1.11.0",
     "@modelcontextprotocol/sdk": "^1.25.1",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -60,6 +61,7 @@
     "cohere-ai": "^7.20.0",
     "date-fns": "^4.1.0",
     "groq-sdk": "^0.37.0",
+    "inngest": "^3.48.1",
     "lucide-react": "^0.562.0",
     "monaco-editor": "^0.55.1",
     "next-themes": "^0.4.6",
