--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,10 @@ fluxium/*
 
 #x files and nuls
 nul
+
+# Compiled JS in src (TypeScript project)
+src/**/*.js
+!src/scripts/*.js
+
+# Agent server build artifacts
+src/services/agents/server/dist/
