--- a/src/services/agents/server/package.json
+++ b/src/services/agents/server/package.json
@@ -5,30 +5,29 @@
     "main": "dist/index.js",
     "scripts": {
         "dev": "tsx watch index.ts",
-        "build:ts": "tsc",
-        "build:pkg": "pkg dist/index.js --targets node20-macos-arm64,node20-macos-x64,node20-linux-x64,node20-win-x64 --output ../../../src-tauri/binaries/rainy-agents-server",
-        "build": "pnpm build:ts && pnpm build:pkg"
+        "bundle": "esbuild index.ts --bundle --platform=node --target=node20 --outfile=dist/index.cjs --format=cjs --external:@tauri-apps/api",
+        "build:bin": "npx @yao-pkg/pkg dist/index.cjs --targets node20-macos-arm64,node20-macos-x64,node20-linux-x64,node20-win-x64 --output ../../../src-tauri/binaries/rainy-agents-server",
+        "build": "pnpm bundle && pnpm build:bin"
     },
     "dependencies": {
-        "hono": "^4.6.0",
-        "@hono/node-server": "^1.13.0",
-        "inngest": "^3.48.1",
-        "@inngest/agent-kit": "^0.13.2"
+        "@hono/node-server": "^1.19.7",
+        "@inngest/agent-kit": "^0.13.2",
+        "hono": "^4.11.1",
+        "inngest": "^3.48.1"
     },
     "devDependencies": {
-        "tsx": "^4.19.0",
-        "typescript": "^5.9.3",
-        "pkg": "^5.8.1",
-        "@types/node": "^22.0.0"
+        "@types/node": "^20",
+        "@yao-pkg/pkg": "^6.11.0",
+        "esbuild": "^0.27.2",
+        "tsx": "^4.21.0",
+        "typescript": "^5.9.3"
     },
     "pkg": {
-        "assets": [
-            "../workflows/**/*.js",
-            "../brain/**/*.js",
-            "../inngest/**/*.js"
-        ],
-        "scripts": [
-            "dist/**/*.js"
-        ]
-    }
+    "targets": [
+      "node*-macos-arm64",
+      "node*-macos-x64", 
+      "node*-linux-x64",
+      "node*-win-x64"
+    ]
+  }
 }
