--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@cerebras/cerebras_cloud_sdk": "^1.59.0",
     "@google/genai": "^1.34.0",
     "@hookform/resolvers": "^5.2.2",
+    "@hugeicons/core-free-icons": "^3.0.0",
     "@inngest/agent-kit": "^0.13.2",
     "@mistralai/mistralai": "^1.11.0",
     "@modelcontextprotocol/sdk": "^1.25.1",
