--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "cohere-ai": "^7.20.0",
     "date-fns": "^4.1.0",
     "groq-sdk": "^0.37.0",
+    "hugeicons-react": "^0.3.0",
     "inngest": "^3.48.1",
     "lucide-react": "^0.562.0",
     "monaco-editor": "^0.55.1",
