--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@cerebras/cerebras_cloud_sdk": "^1.59.0",
     "@google/genai": "^1.34.0",
     "@hookform/resolvers": "^5.2.2",
-    "@hugeicons/core-free-icons": "^3.1.0",
+    "@hugeicons/core-free-icons": "^3.1.1",
     "@inngest/agent-kit": "^0.13.2",
     "@mistralai/mistralai": "^1.11.0",
     "@modelcontextprotocol/sdk": "^1.25.1",
@@ -53,6 +53,7 @@
     "@tanstack/react-virtual": "^3.13.13",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "^2.4.2",
+    "@tauri-apps/plugin-fs": "^2.4.4",
     "@tauri-apps/plugin-global-shortcut": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-process": "^2",
