--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -61,6 +61,7 @@ urlencoding = "2.1"
 rayon = "1.11.0"
 lsp-types = "0.97.0"
 ignore = "0.4.20"
+lru = "0.16.2"
 
 [target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
 tauri-plugin-global-shortcut = "2.3.0"
