--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "inngest": "^3.48.1",
     "lucide-react": "^0.562.0",
     "monaco-editor": "^0.55.1",
+    "motion": "^12.23.26",
     "next-themes": "^0.4.6",
     "openai": "^6.15.0",
     "perplexity-sdk": "^1.0.4",
