--- a/src/services/agents/server/package.json
+++ b/src/services/agents/server/package.json
@@ -10,11 +10,16 @@
     "build": "pnpm bundle && pnpm build:bin"
   },
   "dependencies": {
+    "@browserbasehq/sdk": "^2.6.0",
+    "@daytonaio/sdk": "^0.128.1",
+    "@e2b/code-interpreter": "^2.3.3",
     "@google/genai": "^1.34.0",
     "@hono/node-server": "^1.19.7",
     "@inngest/agent-kit": "^0.13.2",
-    "hono": "^4.11.1",
-    "inngest": "^3.48.1"
+    "@smithery/sdk": "^3.0.1",
+    "hono": "^4.11.3",
+    "inngest": "^3.48.1",
+    "playwright-core": "^1.57.0"
   },
   "devDependencies": {
     "@types/node": "^20",
