feat: add dynamic subagent system with multi-model AI support
- Implement core infrastructure for user-configurable AI agents including SubagentConfig, SubagentRegistry, and SubagentFactory
- Add support for multiple AI models (Gemini, Claude, Grok, GPT-4) with YAML-based configuration schema
- Enhance tool management with categorization and risk classification
- Update documentation and add yaml dependency for parsing subagent files
- Fix TypeScript errors and improve error handling in new components

This commit introduces the dynamic subagent system to enable flexible AI agent configurations, improving modularity and task-specific model selection for better performance across different use cases in Rainy Aether IDE.

--- a/src/services/agents/server/package.json
+++ b/src/services/agents/server/package.json
@@ -23,6 +23,7 @@
     "inngest": "^3.48.1",
     "openai": "^6.15.0",
     "playwright-core": "^1.57.0",
+    "yaml": "^2.8.2",
     "zod": "^4.3.4"
   },
   "devDependencies": {
