--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rainy-aether"
-version = "0.1.15"
+version = "0.1.16"
 description = "A Tauri App"
 authors = ["you"]
 edition = "2021"
@@ -62,6 +62,9 @@ rayon = "1.11.0"
 lsp-types = "0.97.0"
 ignore = "0.4.20"
 lru = "0.16.2"
+
+[target."cfg(unix)".dependencies]
+libc = "0.2"
 
 [target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
 tauri-plugin-global-shortcut = "2.3.0"
