fix(ci): resolve heap out-of-memory errors and fix secret name typo
- Added `NODE_OPTIONS='--max-old-space-size=4096'` to CI and release workflows to prevent JavaScript heap out-of-memory errors during TypeScript checks and Tauri builds.
- Corrected `TAURI_SIGNING_PRIVATE_KEY` secret name in release workflow (was misspelled as `TAURI_PRIVATE_KEY`).
- Bumped version to 0.1.20 across package.json, Cargo.toml, tauri.conf.json, and Cargo.lock.
- Updated CHANGELOG.md with details of the fixes.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,6 +61,8 @@ jobs:
         run: pnpm install
 
       - name: TypeScript check
+        env:
+          NODE_OPTIONS: '--max-old-space-size=4096'
         run: pnpm build
 
       - name: Cargo check
