--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
             args: "--target aarch64-apple-darwin"
             target: "darwin"
             arch: "aarch64"
-          - platform: "macos-latest"
+          - platform: "macos-13"
             args: "--target x86_64-apple-darwin"
             target: "darwin"
             arch: "x86_64"
@@ -69,46 +69,87 @@ jobs:
           cd src/services/agents/server
           pnpm install
 
-      - name: Build agent server sidecar
+      - name: Create binaries directory
+        run: mkdir -p src-tauri/binaries
+
+      - name: Build agent server sidecar (macOS arm64)
+        if: matrix.target == 'darwin' && matrix.arch == 'aarch64'
         shell: bash
         run: |
+          set -e
           cd src/services/agents/server
-          if [ "${{ matrix.target }}" == "darwin" ] && [ "${{ matrix.arch }}" == "aarch64" ]; then
-            pnpm build:macos-arm64
-          elif [ "${{ matrix.target }}" == "darwin" ] && [ "${{ matrix.arch }}" == "x86_64" ]; then
-            pnpm build:macos-x64
-          elif [ "${{ matrix.target }}" == "linux" ]; then
-            pnpm build:linux-x64
-          fi
+          echo "Building sidecar for macOS ARM64..."
+          pnpm build:macos-arm64
+          echo "Verifying binary exists..."
+          ls -la ../../../src-tauri/binaries/
+          test -f ../../../src-tauri/binaries/rainy-agents-server-aarch64-apple-darwin || (echo "ERROR: Binary not found!" && exit 1)
+
+      - name: Build agent server sidecar (macOS x64)
+        if: matrix.target == 'darwin' && matrix.arch == 'x86_64'
+        shell: bash
+        run: |
+          set -e
+          cd src/services/agents/server
+          echo "Building sidecar for macOS x64..."
+          pnpm build:macos-x64
+          echo "Verifying binary exists..."
+          ls -la ../../../src-tauri/binaries/
+          test -f ../../../src-tauri/binaries/rainy-agents-server-x86_64-apple-darwin || (echo "ERROR: Binary not found!" && exit 1)
+
+      - name: Build agent server sidecar (Linux)
+        if: matrix.target == 'linux'
+        shell: bash
+        run: |
+          set -e
+          cd src/services/agents/server
+          echo "Building sidecar for Linux x64..."
+          pnpm build:linux-x64
+          echo "Verifying binary exists..."
+          ls -la ../../../src-tauri/binaries/
+          test -f ../../../src-tauri/binaries/rainy-agents-server-x86_64-unknown-linux-gnu || (echo "ERROR: Binary not found!" && exit 1)
 
       - name: Build agent server sidecar (Windows)
         if: matrix.target == 'windows'
         shell: pwsh
         run: |
+          $ErrorActionPreference = "Stop"
           cd src/services/agents/server
+          Write-Host "Building sidecar for Windows x64..."
           pnpm build:windows-x64
+          Write-Host "Verifying binary exists..."
+          Get-ChildItem ../../../src-tauri/binaries/
+          if (-not (Test-Path "../../../src-tauri/binaries/rainy-agents-server-x86_64-pc-windows-msvc.exe")) {
+            Write-Error "ERROR: Binary not found!"
+            exit 1
+          }
 
       - name: Configure sidecar in Tauri (Unix)
         if: matrix.target != 'windows'
         shell: bash
         run: |
-          # Inject externalBin config into tauri.conf.json for production build
           cd src-tauri
+          echo "Injecting externalBin config..."
           node -e "
             const fs = require('fs');
             const config = JSON.parse(fs.readFileSync('tauri.conf.json', 'utf8'));
             config.bundle.externalBin = ['binaries/rainy-agents-server'];
             fs.writeFileSync('tauri.conf.json', JSON.stringify(config, null, 2));
+            console.log('Updated tauri.conf.json bundle config');
           "
+          echo "Listing binaries for verification:"
+          ls -la binaries/
 
       - name: Configure sidecar in Tauri (Windows)
         if: matrix.target == 'windows'
         shell: pwsh
         run: |
           cd src-tauri
+          Write-Host "Injecting externalBin config..."
           $config = Get-Content -Raw tauri.conf.json | ConvertFrom-Json
           $config.bundle | Add-Member -NotePropertyName 'externalBin' -NotePropertyValue @('binaries/rainy-agents-server') -Force
           $config | ConvertTo-Json -Depth 10 | Set-Content tauri.conf.json
+          Write-Host "Listing binaries for verification:"
+          Get-ChildItem binaries/
 
       - name: Build application
         uses: tauri-apps/tauri-action@v0
